# subprocess

./: .gitignore  Cargo.toml  TODO.md  prek.toml
.github/actions/setup-rust/: action.yaml
.github/workflows/: ci.yaml  semantic-pr.yaml
.tmp/claude/research/: research-brief.md
.tmp/claude/superpowers/plans/: 2026-06-20-foundation-errors-quoting-command-input.md  2026-06-26-plan7-graceful-shutdown.md
.tmp/claude/superpowers/specs/: 2026-06-20-subprocess-design.md  2026-06-26-plan7-graceful-shutdown-design.md
src/: child.rs  command.rs  command_tests.rs  containment.rs  containment_tests.rs  error.rs  error_tests.rs  identity.rs  identity_tests.rs  lib.rs  process.rs  process_tests.rs  quote.rs  stdio.rs  stdio_tests.rs  wait.rs  wait_tests.rs
src/child/: graceful.rs  lifecycle.rs  pump.rs  spawn.rs
src/containment/: cgroup.rs  cgroup_tests.rs  dispatch.rs  dispatch_tests.rs  enumerate.rs  treewalk.rs  treewalk_tests.rs  unix.rs  unix_tests.rs  windows.rs  windows_tests.rs
src/containment/enumerate/: linux.rs  macos.rs  windows.rs
src/identity/: linux.rs  macos.rs  stat_parse.rs  stat_parse_tests.rs  windows.rs  windows_tests.rs
src/process/: graceful.rs
src/quote/: posix.rs  posix_tests.rs  windows.rs  windows_tests.rs
src/wait/: linux.rs  macos.rs  windows.rs
testbin/: main.rs
tests/: foundation_smoke.rs  graceful.rs  identity_lifecycle.rs  lifecycle.rs  process.rs  spawn_io.rs
tests/common/: mod.rs
